# backend/src/generated/swagger.json
@@ -871,7 +871,11 @@
 				"tags": [
 					"User"
 				],
-				"security": [],
+				"security": [
+					{
+						"": []
+					}
+				],
 				"parameters": []
 			},
 			"post": {
